--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@
         </script>-->
     </div>
     <div class="chart" id="nCov"> 표 생성중. . . 계속 생성중이라면, 새로고침 해주세요 <span id="loading">(##/##)</span></div>
-    <p class="pad">남성 : <span style="color: #99d9ea">■</span> | 여성 : <span style="color: #ffaec9">■</span> | 확인중 : <span style="color: #c3c3c3">■</span> | 신규 : <span style="color: #fff;font-weight: bold;background-color: #e65100;padding: 0 3px;border-radius: 3px;">N</span></p>
-    <div class="pad">
-        <span><a id="kakao-link-btn" href="javascript:;" style="font-size: 14px;margin: 0 10px">
+    <p class="pad"><span style="display: inline-block;">남성 : <span style="color: #99d9ea">■</span></span> | <span style="display: inline-block;">여성 : <span style="color: #ffaec9">■</span></span> | <span style="display: inline-block;">확인중 : <span style="color: #c3c3c3">■</span></span> | <span style="display: inline-block;">신규 : <span style="color: #fff;font-weight: bold;background-color: #e65100;padding: 0 3px;border-radius: 3px;">N</span></span>
+        <span style="float: right;"><a id="kakao-link-btn" href="javascript:;" style="font-size: 14px;margin: 0 10px">
         <img style="width: 24px;vertical-align: middle;" src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"/> <span>카카오톡 공유하기</span>
         </a></span>
-    </div>
+    </p>
     <div class="content">
         <!--<p>남성 : <span style="color: #99d9ea">■</span> | 여성 : <span style="color: #ffaec9">■</span> | 확인중 : <span style="color: #c3c3c3">■</span></p>
         <p><span style="color: #4CAF50">#번호</span> : 완치 | <span style="font-weight: bold;color: #fff;background-color: #e65100;padding: 0 3px;border-radius: 3px;font-size: 14px;">N</span> : 2일 이내 확진자</p>
