--- a/index.html
+++ b/index.html
@@ -38,12 +38,26 @@
             margin: auto;
             padding: 20px;
         }
+        #graph2{
+            display: block;
+            background-color: #f1f1f1;
+            vertical-align: middle;
+            border: 1px solid #eee;
+        }
+        #progress{
+            height: 20px;
+            display: inline-block;
+            background-color: #8bc34a;
+            color: #fff;
+            text-align: center;
+            vertical-align: top;
+        }
     </style>
 </head>
 <body>
     <h1 style="text-align: center;padding: 20px 0;margin: 0;background-color: #333;color: #fff;"><span style="display: inline-block;">코로나19</span> <span style="display: inline-block;">확진자 현황</span></h1>
     <h1 id="domain" style="text-align: center;padding: 5px;margin: 0;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">주소가 변경되었습니다.</span> <span style="display: inline-block;margin: 6px">ncov-korea.cf</span>-&gt;<span style="display: inline-block;margin: 6px"><a href="/">ncov-korea.com</a></span></h1>
-    <h1 style="text-align: center;padding: 5px;margin: 0 0 20px;background-color: #efefef;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">정확한 발표 이후 수정될 수 있습니다.</span> <span style="display: inline-block;margin: 6px">일부 정보만 있는 확진자는 추후 정보가 나오는대로 수정될 예정입니다.</span></h1>
+    <h1 style="text-align: center;padding: 5px;margin: 0;background-color: #efefef;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">정확한 발표 이후 수정될 수 있습니다.</span> <span style="display: inline-block;margin: 6px">일부 정보만 있는 확진자는 추후 정보가 나오는대로 수정될 예정입니다.</span></h1>
     <script>
         (function(){
             if(document.referrer.split("/")[2]!="ncov-korea.cf"){
@@ -75,7 +89,8 @@
             .content,.chart,p.pad,#domain{display: none;}
         </style>
     </noscript>
-    <div class="chart" id="nCov"><span class="pad">표 생성중. . . 계속 생성중이라면, 새로고침 해주세요 <span id="loading">(##/##)</span></span></div>
+    <span id="graph2"><span id="progress"></span></span>
+    <div class="chart" id="nCov" style="margin: 20px 0 0"><span class="pad">표 생성중. . . 계속 생성중이라면, 새로고침 해주세요</span></div>
     <p class="pad"><span style="display: inline-block;">남성 : <span style="color: #99d9ea">■</span></span> | <span style="display: inline-block;margin: 0 0 10px">여성 : <span style="color: #ffaec9">■</span></span> | <span style="display: inline-block;">확인중 : <span style="color: #c3c3c3">■</span></span> | <span style="display: inline-block;">신규 : <span style="color: #fff;font-weight: bold;background-color: #e65100;padding: 0 3px;border-radius: 3px;">N</span></span>
         <span style="float: right"><a id="kakao-link-btn" href="javascript:;" style="font-size: 14px">
         <img style="width: 24px;vertical-align: middle;" src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"/> <span>카카오톡 공유하기</span>
