--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         </style>
     </noscript>
     <span id="graph2"><span id="progress"></span></span>
-    <p class="pad"><span style="display: inline-block;">남성 : <span style="color: #99d9ea">■</span></span> | <span style="display: inline-block;margin: 0 0 20px">여성 : <span style="color: #ffaec9">■</span></span> | <span style="display: inline-block;">확인중 : <span style="color: #c3c3c3">■</span></span> | <span style="display: inline-block;">신규 : <span style="color: #fff;font-weight: bold;background-color: #e65100;padding: 0 3px;border-radius: 3px;">N</span></span>
+    <p class="pad"><span style="display: inline-block;">남성 : <span style="color: #99d9ea">■</span></span> | <span style="display: inline-block;margin: 0 0 20px">여성 : <span style="color: #ffaec9">■</span></span> | <span style="display: inline-block;">확인중 : <span style="color: #c3c3c3">■</span></span> | <span style="display: inline-block;">신규 : <span style="color: #fff;font-weight: bold;background-color: #e65100;padding: 0 3px;border-radius: 3px;font-size: 12px">N</span></span>
         <span style="float: right"><a id="kakao-link-btn" href="javascript:;" style="font-size: 14px;background-color: #eee;padding: 10px;border-radius: 10px;color: #000;">
         <img style="width: 24px;vertical-align: middle;" src="https://developers.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png"/> <span>카카오톡 공유하기</span>
         </a></span>
@@ -214,7 +214,7 @@
             var s = document.createElement("script");
             s.src='js.min.js?'+parseInt(new Date().getTime()/60000);
             document.body.appendChild(s);
-            Kakao.init("5884b0444b8170b916743d782e5f930e"),Kakao.Link.createDefaultButton({container:"#kakao-link-btn",objectType:"feed",content:{title:"코로나 현황표",description:"#코로나 #코로나현황표 #코로나확진자 #코로나정보",imageUrl:"https://ncov-korea.com/imgs/main.png",link:{mobileWebUrl:"https://ncov-korea.com",webUrl:"https://ncov-korea.com"}},buttons:[{title:"웹으로 보기",link:{mobileWebUrl:"https://ncov-korea.com",webUrl:"https://ncov-korea.com"}},{title:"앱으로 보기",link:{mobileWebUrl:"https://ncov-korea.com",webUrl:"https://ncov-korea.com"}}]});
+            Kakao.init("5884b0444b8170b916743d782e5f930e"),Kakao.Link.createDefaultButton({container:"#kakao-link-btn",objectType:"feed",content:{title:"코로나 현황표",description:"#코로나 #코로나현황표 #코로나확진자 #코로나정보",imageUrl:"https://ncov-korea.com/imgs/main.png",link:{mobileWebUrl:"https://ncov-korea.com",webUrl:"https://ncov-korea.com"}},buttons:[{title:"웹으로 보기",link:{mobileWebUrl:"https://ncov-korea.com",webUrl:"https://ncov-korea.com"}}]});
         })();
     </script>
 <div id="alertMsg" style="display: none;"><span class="xbtn" title="닫기" onclick="document.getElementById('alertMsg').style.display='none';">X</span><h2 id="title_"></h2><div id="info_"></div></div>
