--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             text-align: center;
             vertical-align: top;
         }
+        div.country2{width: 50px;}
     </style>
 </head>
 <body>
@@ -100,9 +101,11 @@
         <!--<p>남성 : <span style="color: #99d9ea">■</span> | 여성 : <span style="color: #ffaec9">■</span> | 확인중 : <span style="color: #c3c3c3">■</span></p>
         <p><span style="color: #4CAF50">#번호</span> : 완치 | <span style="font-weight: bold;color: #fff;background-color: #e65100;padding: 0 3px;border-radius: 3px;font-size: 14px;">N</span> : 2일 이내 확진자</p>
         <br>-->
+        <p>* 지역별 구분(▲/▼)은 1차감염(또는 전파경로를 모르는)확진자 기준이며, 해당지역에서만 감염이 일어나진 않음</p>
+        <p>* 정확한 업데이트를 위해 확진자는 확진자 번호가 부여된 후(보통 2시 브리핑) 업데이트 될 수 있습니다.</p>
+        <br>
         <h3 id="update">최근 업데이트 : ####-##-## ##시##분</h3>
         <p>#27 확진자는 표의 표기와 달리 같은 장소 여행자를 전파 횟수로 세지 않음.</p>
-        <p>* 정확한 업데이트를 위해 확진자는 확진자 번호가 부여된 후(보통 2시 브리핑) 업데이트 될 수 있습니다.</p>
         <p><span style="color: #b71c1c;font-weight: bold;font-size: 2em;">↓</span> : 감염수칙을 지키지 않아 감염된 사례</p>
         <br>
         <h3>통계 <span id="stats_ex"></span></h3>
