--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <h1 style="text-align: center;padding: 20px 0;margin: 0;background-color: #333;color: #fff;"><span style="display: inline-block;">코로나19</span> <span style="display: inline-block;">확진자 현황</span></h1>
     <h1 id="domain" style="text-align: center;padding: 5px;margin: 0;background-color: #E0E0E0;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">주소가 변경되었습니다.</span> <span style="display: inline-block;margin: 6px">ncov-korea.cf</span>-&gt;<span style="display: inline-block;margin: 6px"><a href="/">ncov-korea.com</a></span></h1>
-    <h1 style="text-align: center;padding: 5px;margin: 0;background-color: #efefef;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">정확한 발표 이후 수정될 수 있습니다.</span> <span style="display: inline-block;margin: 6px">일부 정보만 있는 확진자는 추후 정보가 나오는대로 수정될 예정입니다.</span></h1>
+    <h1 style="text-align: center;padding: 5px;margin: 0;background-color: #efefef;color: #000;font-size: 16px;"><span style="display: inline-block;margin: 6px">정확한 발표 이후 수정될 수 있습니다.</span> <span style="display: inline-block;margin: 6px">일부 정보만 있는 경우 정보가 나오는대로 수정될 예정입니다.(여러 자료를 조합중입니다.)</span></h1>
     <script>
         (function(){
             if(document.referrer.split("/")[2]!="ncov-korea.cf"){
@@ -102,7 +102,7 @@
         <p><span style="color: #4CAF50">#번호</span> : 완치 | <span style="font-weight: bold;color: #fff;background-color: #e65100;padding: 0 3px;border-radius: 3px;font-size: 14px;">N</span> : 2일 이내 확진자</p>
         <br>-->
         <p>* 지역별 구분(▲/▼)은 1차감염(또는 전파경로를 모르는)확진자 기준이며, 해당지역에서만 감염이 일어나진 않음</p>
-        <p>* 정확한 업데이트를 위해 확진자는 확진자 번호가 부여된 후(보통 2시 브리핑) 업데이트 될 수 있습니다.</p>
+        <p>* 정확한 업데이트를 위해 확진자는 확진자 번호가 부여된 후 업데이트 될 수 있습니다.</p>
         <br>
         <h3 id="update">최근 업데이트 : ####-##-## ##시##분</h3>
         <p>#27 확진자는 표의 표기와 달리 같은 장소 여행자를 전파 횟수로 세지 않음.</p>
@@ -133,7 +133,7 @@
         <p style="display: none;">코로나19(COVID19)로 재명명 되었다.</p>
         <br>
         <h3>자료 출처</h3>
-        <p>질병관리본부 홈페이지와 뉴스 기사</p>
+        <p>질병관리본부, 각 지자체, 신뢰 가능한 뉴스 기사</p>
         <p>* 출처마다 나이가 ± 1 정도 차이 날 수도 있음</p>
         <br>
         <h3>소개</h3>
