--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <br>-->
         <p>* 지역별 구분(▲/▼)은 1차감염(또는 전파경로를 모르는)확진자 기준이며, 해당지역에서만 감염이 일어나진 않음</p>
         <p>* 정확한 업데이트를 위해 확진자는 확진자 번호가 부여된 후 업데이트 될 수 있습니다.</p>
+        <p>* 확진자 번호를 알수없는 사망자는 확진자 번호 매칭이 안 된 번호로(<span style="color: #c3c3c3">■</span>) 먼저 배정 후 수정될 수 있음</p>
         <br>
         <h3 id="update">최근 업데이트 : ####-##-## ##시##분</h3>
         <p>#27 확진자는 표의 표기와 달리 같은 장소 여행자를 전파 횟수로 세지 않음.</p>
