--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
         <div id="stats"></div>
         <br>
         <h3>그래프 통계</h3>
+        <div>
+            <img src="./imgs/20200224.9.png">
+        </div>
         <div id="stats2">
             <h4>일별 확진자/완치자 통계</h4>
             <div style="max-width: 800px;">
