--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             vertical-align: top;
         }
         div.country2{width: 50px;}
+        .Treant{overflow-y: hidden;}
     </style>
 </head>
 <body>
