--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
         <img src="./imgs/check_all.png">
     </div>
     <div class="sido_">
+        <h3>▶ 전국 현황 (사망자 수)</h3>
+        <img src="./imgs/death.png">
+    </div>
+    <div class="sido_">
         <h3>▶ 공식 사이트</h3>
         <div class="sido_">
             <a class="sido" href="http://www.seoul.go.kr/coronaV/coronaStatus.do" target="_blank">서울</a>
