--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div id="nCov2" style="display: none;">
         <div>
             <style>.sido_{padding: 20px;display: inline-block;max-width: 312px;vertical-align: top;text-align: left;}.sido{padding: 10px;display: inline-block;cursor: pointer;}.sido:hover{background-color: #333;color: #fff;transition: 0.2s;}.sido_ h3{background-color: #607D8B;color: #fff;padding: 10px}.sido_ a{text-decoration: none;color: #000}.sido_ .sido_{padding: 0 10px 20px}.sido2{display: inline-block;padding: 10px 0;}</style>
-<div style="text-align: center;">
+<div style="text-align: center;max-width: 1200px;margin: auto;">
     <div class="sido_">
         <h3>▶ 전국 현황 (확진자 수)</h3>
         <img src="./imgs/confirm.png">
@@ -134,16 +134,16 @@
         <img src="./imgs/plus.png">
     </div>
     <div class="sido_">
+        <h3>▶ 전국 현황 (사망자 수)</h3>
+        <img src="./imgs/death.png">
+    </div>
+    <div class="sido_">
         <h3>▶ 전국 현황 (검사중 인원)</h3>
         <img src="./imgs/check.png">
     </div>
     <div class="sido_">
         <h3>▶ 전국 현황 (검사합계 인원)</h3>
         <img src="./imgs/check_all.png">
-    </div>
-    <div class="sido_">
-        <h3>▶ 전국 현황 (사망자 수)</h3>
-        <img src="./imgs/death.png">
     </div>
     <div class="sido_">
         <h3>▶ 공식 사이트</h3>
