--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <br>
         <h3>그래프 통계</h3>
         <div>
-            <img style="max-width: 100%" src="./imgs/20200225.9.png">
+            <img style="max-width: 100%" src="./imgs/graph.png">
         </div>
         <div id="stats2">
             <h4>일별 확진자/완치자 통계</h4>
